tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00017.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00017.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_anon2E0, "s", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 3 : s32i
    %4 = get_member %1[0] "x" : s32i*
    store %3, %4, align 4
    %5 = const 5 : s32i
    %6 = get_member %1[1] "y" : s32i*
    store %5, %6, align 4
    %7 = get_member %1[1] "y" : s32i*
    %8 = load %7 : s32i, align 4
    %9 = get_member %1[0] "x" : s32i*
    %10 = load %9 : s32i, align 4
    %11 = sub %8, %10 : s32i [nsw]
    %12 = const 2 : s32i
    %13 = sub %11, %12 : s32i [nsw]
    store %13, %0
    %14 = load %0 : s32i
    return %14
}
