tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00019.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00019.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_S, "s", align 8
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 0 : s32i
    %4 = get_member %1[1] "x" : s32i*
    store %3, %4, align 8
    %5 = get_member %1[0] "p" : rec_S**
    store %1, %5, align 8
    %6 = get_member %1[0] "p" : rec_S**
    %7 = load %6 : rec_S*, align 8
    %8 = get_member %7[0] "p" : rec_S**
    %9 = load %8 : rec_S*, align 8
    %10 = get_member %9[0] "p" : rec_S**
    %11 = load %10 : rec_S*, align 8
    %12 = get_member %11[0] "p" : rec_S**
    %13 = load %12 : rec_S*, align 8
    %14 = get_member %13[0] "p" : rec_S**
    %15 = load %14 : rec_S*, align 8
    %16 = get_member %15[1] "x" : s32i*
    %17 = load %16 : s32i, align 8
    store %17, %0
    %18 = load %0 : s32i
    return %18
}
