tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00024.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.c-testsuite/case_00024.c" (c, x86_64-unknown-linux-gnu)
global v : rec_s = zero [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 1 : s32i
    %3 = get_global @v : rec_s*
    %4 = get_member %3[0] "x" : s32i*
    store %2, %4, align 4
    %5 = const 2 : s32i
    %6 = get_global @v : rec_s*
    %7 = get_member %6[1] "y" : s32i*
    store %5, %7, align 4
    %8 = const 3 : s32i
    %9 = get_global @v : rec_s*
    %10 = get_member %9[0] "x" : s32i*
    %11 = load %10 : s32i, align 4
    %12 = sub %8, %11 : s32i [nsw]
    %13 = get_global @v : rec_s*
    %14 = get_member %13[1] "y" : s32i*
    %15 = load %14 : s32i, align 4
    %16 = sub %12, %15 : s32i [nsw]
    store %16, %0
    %17 = load %0 : s32i
    return %17
}
